# rust_linking

./: .gitignore  Cargo.toml  build.rs  build.sh
c/lib/: build.sh  test_utils.c
c/test/: main.c  my_program
src/: lib.rs
src/example/: mod.rs
src/test/: mod.rs
src/utils/: mod.rs
